Banner part done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-    <header class="font-[Poppins]">
+<header class="font-[Poppins]">
     <div class="navbar bg-base-100 px-10">
         <div class="navbar-start">
             <div class="dropdown">
@@ -70,5 +70,20 @@
         </div>
     </div>
 </header>
+
+<!-- Banner style  -->
+<section class="relative h-[500px] w-full flex items-center flex-col-reverse md:flex-row py-20 md:text-left text-white">
+    <div class="absolute inset-0 z-0">
+        <img src="./Assets/banner-image.png" alt="" class="w-full h-full object-cover brightness-40">
+    </div>
+    <div class="relative z-10 px-4">
+        <h1 class="text-4xl  font-bold mb-4">
+            Best Collection For You
+        </h1>
+        <p class="text-lg mb-6 max-w-lg mx-auto">Discover the latest trends in fashion, electronics, and more. Shop with confidence and style at SwiftCart.</p>
+        <button class="btn btn-primary bg-indigo-600 border-none px-10">Shop Now</button>
+    </div>
+</section>
+
 </body>
 </html>
