--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 </head>
 <body>
 
-<header class="font-[Poppins]">
+<!-- Navbar  -->
+    <header class="font-[Poppins]">
     <div class="navbar bg-base-100 px-10">
         <div class="navbar-start">
             <div class="dropdown">
@@ -82,6 +83,60 @@
         </h1>
         <p class="text-lg mb-6 max-w-lg mx-auto">Discover the latest trends in fashion, electronics, and more. Shop with confidence and style at SwiftCart.</p>
         <button class="btn btn-primary bg-indigo-600 border-none px-10">Shop Now</button>
+    </div>
+</section>
+
+<!-- Reason to use this site  -->
+ <section class="py-16 bg-white">
+    <div class="container mx-auto px-4">
+        <div class="text-center mb-12">
+            <h2 class="text-3xl font-bold text-gray-900 mb-2">Why Choose Us</h2>
+            <p class="text-gray-500">We provide the best shopping experience with top-notch services.</p>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            
+            <div class="p-8 border border-gray-100 rounded-2xl bg-gray-50 transition hover:shadow-lg">
+                <div class="w-12 h-12 bg-blue-50 text-blue-600 rounded-lg flex items-center justify-center mb-6">
+                    <i class="fa-regular fa-truck text-xl"></i>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-3">Fast Delivery</h3>
+                <p class="text-gray-500 text-sm leading-relaxed">
+                    Get your orders delivered to your doorstep quickly and efficiently.
+                </p>
+            </div>
+
+            <div class="p-8 border border-gray-100 rounded-2xl bg-gray-50 transition hover:shadow-lg">
+                <div class="w-12 h-12 bg-blue-50 text-blue-600 rounded-lg flex items-center justify-center mb-6">
+                    <i class="fa-regular fa-headphones text-xl"></i>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-3">24/7 Support</h3>
+                <p class="text-gray-500 text-sm leading-relaxed">
+                    Our support team is available around the clock to assist you.
+                </p>
+            </div>
+
+            <div class="p-8 border border-gray-100 rounded-2xl bg-gray-50 transition hover:shadow-lg">
+                <div class="w-12 h-12 bg-blue-50 text-blue-600 rounded-lg flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-shield-heart text-xl"></i>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-3">Secure Payment</h3>
+                <p class="text-gray-500 text-sm leading-relaxed">
+                    Experience safe and secure transactions with our encrypted payment systems.
+                </p>
+            </div>
+
+            <div class="p-8 border border-gray-100 rounded-2xl bg-gray-50 transition hover:shadow-lg">
+                <div class="w-12 h-12 bg-blue-50 text-blue-600 rounded-lg flex items-center justify-center mb-6">
+                    <i class="fa-solid fa-arrows-rotate text-xl"></i>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-3">Easy Returns</h3>
+                <p class="text-gray-500 text-sm leading-relaxed">
+                    Not satisfied? Return your products easily within 30 days.
+                </p>
+            </div>
+
+        </div>
     </div>
 </section>
 
