Completed answer to all five question in readme file

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <img src="./Assets/banner-image.png" alt="" class="w-full h-full object-cover brightness-40">
     </div>
     <div class="relative z-10 px-4">
-        <h1 class="text-4xl  font-bold mb-4">
+        <h1 class="text-5xl font-bold mb-4">
             Best Collection For You
         </h1>
-        <p class="text-lg mb-6 max-w-lg mx-auto">Discover the latest trends in fashion, electronics, and more. Shop with confidence and style at SwiftCart.</p>
+        <p class="text-lg mb-6 max-w-lg text-left">Discover the latest trends in fashion, electronics, and more. Shop with confidence and style at SwiftCart.</p>
         <button class="btn btn-primary bg-indigo-600 border-none px-10">Shop Now</button>
     </div>
 </section>
