--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
             
             <div class="grid grid-cols-1 md:grid-cols-4 gap-12 mb-12">
             <div class="space-y-4">
-                <h4 class="text-xl font-bold text-indigo-500">SwiftCart</h4>
+                <h4 class="text-xl font-bold text-indigo-500 mb-4">SwiftCart</h4>
                 <p class="text-gray-400 text-sm leading-relaxed">
                     You one-stop for all your fasion and lifestyle needs. Quality products, fast delivery and excellent support.
                 </p>
             </div>
 
             <div>
-                <h4 class="text-white font-bold mb-6 text-sm uppercase tracking-widest">QUICK LINKS</h4>
+                <h4 class="text-white font-bold mb-4 text-sm uppercase tracking-widest">QUICK LINKS</h4>
                 <ul class="space-y-4 text-gray-400 text-sm">
                     <li><a href="#" class="hover:text-white transition">Home</a></li>
                     <li><a href="#" class="hover:text-white transition">Products</a></li>
@@ -179,7 +179,7 @@
             </div>
 
             <div>
-                <h4 class="text-white font-bold mb-6 text-sm uppercase tracking-widest">Support</h4>
+                <h4 class="text-white font-bold mb-4 text-sm uppercase tracking-widest">Support</h4>
                 <ul class="space-y-4 text-gray-400 text-sm">
                     <li><a href="#" class="hover:text-white transition">FAQ</a></li>
                     <li><a href="#" class="hover:text-white transition">Shipping</a></li>
@@ -188,8 +188,8 @@
                 </ul>
             </div>
             <div class="max-w-md text-center md:text-left">
-                <h5 class="text-normal font-normal mb-2 text-white">SUBSCRIBE TO OUR NEWSLETTER</h5>
-                <p class="text-gray-500 text-sm font-mono">The latest news, articles, and resources, sent to your inbox weekly.</p>
+                <h5 class="text-white font-bold mb-4 text-nowrap uppercase tracking-widest">SUBSCRIBE TO OUR NEWSLETTER</h5>
+                <p class="text-gray-500 font-mono mb-3 text-sm tracking-widest">The latest news, articles, and resources, sent to your inbox weekly.</p>
                 <div class="flex  md:w-auto gap-2">
                     <input type="email" placeholder="Enter your email" class="input input-bordered w-full md:w-80 text-black rounded-r-none" />
                     <button class="btn btn-primary bg-indigo-600 border-none rounded-l-none px-8  ">Subscribe</button>
@@ -210,9 +210,9 @@
                 
                 <div class="flex gap-4 text-2xl">
                     <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-square-facebook"></i></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-square-twitter"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="#" class="text-gray-400 hover:text-white"><i class="fa-brands fa-square-linkedin"></i></a>
                 </div>
             </div>
         </div>
